--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <h1 style="color: #333;">Investment Calculator</h1>
-    <p style="color: #666;">Start your financial journey today!</p>
+    <p style="color: #666;">Hello everybody. This is my first project I made for Hack CLub's High Seas event. I don't have too much coding skill but I like finance so I hope you like what I made. Please give me any feedback you have so I can make my project even better. </p>
 
     <div class="calculator">
       <label for="initialInvestment">Initial Investment:</label>
