--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="result"></div>
 
     <div class="info" style="background-color: #f2f2f2; padding: 20px;">
-      <h2>What is Investing?</h2>
+      <h2>What is Investing? What is A Savings Account?</h2>
       <p>Investing is the process of allocating money to assets with the expectation of generating a return. It's like planting a seed and watching it grow over time.</p>
 
       <h2>Savings Account vs. Investment Account Comparison</h2>
